--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav role="navigation">
+		<ul role="list">
+			<li role="listitem"><a href="#about">About</a></li>
+			<li role="listitem"><a href="#projects">Projects</a></li>
+			<li role="listitem"><a href="#contact">Contact</a></li>
+		</ul>
+	</nav>
+	<header>
+		<h1 role="heading">Welcome to My Portfolio</h1>
+	</header>
+	<section id="about">
+		<img src="profile.jpg" alt="Profile picture of the portfolio owner" role="img">
+		<p>Hello! I'm a web developer passionate about creating accessible and user-friendly websites. Explore my work below!</p>
+	</section>
+	<section id="projects">
+		<h2 role="heading">Projects</h2>
+		<ul role="list">
+			<li role="listitem">Project 1: Responsive Website Design</li>
+			<li role="listitem">Project 2: E-commerce Application</li>
+			<li role="listitem">Project 3: Accessible Blog Platform</li>
+		</ul>
+	</section>
+	<footer id="contact">
+		<h2 role="heading">Contact</h2>
+		<p>Email: <a href="ksrushtimahesh@gmail.com">ksrushtimahesh@gmail.com</a></p>
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
