--- a/main.html
+++ b/main.html
@@ -8,32 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav role="navigation">
-		<ul role="list">
-			<li role="listitem"><a href="#about">About</a></li>
-			<li role="listitem"><a href="#projects">Projects</a></li>
-			<li role="listitem"><a href="#contact">Contact</a></li>
-		</ul>
-	</nav>
-	<header>
-		<h1 role="heading">Welcome to My Portfolio</h1>
-	</header>
-	<section id="about">
-		<img src="profile.jpg" alt="Profile picture of the portfolio owner" role="img">
-		<p>Hello! I'm a web developer passionate about creating accessible and user-friendly websites. Explore my work below!</p>
-	</section>
-	<section id="projects">
-		<h2 role="heading">Projects</h2>
-		<ul role="list">
-			<li role="listitem">Project 1: Responsive Website Design</li>
-			<li role="listitem">Project 2: E-commerce Application</li>
-			<li role="listitem">Project 3: Accessible Blog Platform</li>
-		</ul>
-	</section>
-	<footer id="contact">
-		<h2 role="heading">Contact</h2>
-		<p>Email: <a href="ksrushtimahesh@gmail.com">ksrushtimahesh@gmail.com</a></p>
-	</footer>
+	<h1>My Playlist</h1>
+
+	<ul>
+		<li><a href="#" target="_blank">Song 1</a></li>
+		<li><a href="#" target="_blank">Song 2</a></li>
+		<li><a href="#" target="_blank">Song 3</a></li>
+		<li><a href="#" target="_blank">Song 4</a></li>
+		<li><a href="#" target="_blank">Song 5</a></li>
+	</ul>
+
+	<h2>Now Playing...</h2>
+
+	<div class="player_one">
+		<video controls>
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+		</video>
+	</div>
+
+	<h2>MP3 songs</h2>
+    <div class="player_two">
+	<p>Maan Meri Jaan</p>
+	<audio controls>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+	</audio>
+	</div>	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
